bpk-lib/crates/core/tests/ui/obs_must_use.stderr
error[E0624]: associated function `new` is private
 --> tests/ui/obs_must_use.rs:7:22
  |
7 |         AtLeastOnce::new(CheckpointId::new("obs-must-use").expect("valid checkpoint id"));
  |                      ^^^ private associated function
  |
 ::: src/store/delivery/observation.rs
  |
  |     pub(crate) fn new(checkpoint_id: CheckpointId) -> Self {
  |     ------------------------------------------------------ private associated function defined here

error[E0624]: associated function `new` is private
 --> tests/ui/obs_must_use.rs:9:22
  |
9 |         AtLeastOnce::new(CheckpointId::new("obs-must-use").expect("valid checkpoint id")),
  |                      ^^^ private associated function
  |
 ::: src/store/delivery/observation.rs
  |
  |     pub(crate) fn new(checkpoint_id: CheckpointId) -> Self {
  |     ------------------------------------------------------ private associated function defined here
